--- a/srfi-160.html
+++ b/srfi-160.html
@@ -21,10 +21,9 @@ Shiro Kawai (contributed a major patch).
 
 <H1>Status</H1>
 
-<p>This SRFI is currently in <em>draft</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+160+at+srfi+dotschemers+dot+org">srfi-160@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-160">archive</a>.</p>
+<p>This SRFI is currently in <em>final</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+160+at+srfi+dotschemers+dot+org">srfi-160@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-160">archive</a>.</p>
 <ul>
   <li>Received: 2018/5/20</li>
-  <li>60-day deadline: 2018/7/20</li>
   <li>Draft #1 published: 2018/8/21</li>
   <li>Draft #2 published: 2018/9/2</li>
   <li>Draft #3 published: 2018/9/8</li>
@@ -36,6 +35,7 @@ Shiro Kawai (contributed a major patch).
   <li>Draft #9 published: 2019/3/11</li>
   <li>Draft #10 published: 2019/5/21</li>
   <li>Draft #11 published: 2019/7/31</li>
+  <li>Finalized: 2019/8/27</li>
 </ul>
 
 <H1>Abstract</H1>
@@ -49,13 +49,6 @@ An external representation is specified which may be supported by the
 <code>read</code> and <code>write</code> procedures and by the program
 parser so that programs can contain references to literal homogeneous
 vectors.</p>
-
-<H1>Issues</H1>
-
-<ul>
-  <li>None at present.</li>
-
-</ul>
 
 <H1>Rationale</H1>
 
