--- a/srfi-160.html
+++ b/srfi-160.html
@@ -484,7 +484,7 @@ to each, returning respectively a @vector of the results,
 an undefined value with the results placed back in <i>@vec</i>,
   and an undefined value with no change to <i>@vec</i>.</p>
 
-<p>If more than one vectors are passed, <i>f</i> gets one element
+<p>If more than one vector is passed, <i>f</i> gets one element
   from each vector as arguments.  If the lengths of the vectors differ,
   iteration stops at the end of the shortest vector.
   For <code>@vector-map!</code>, only <i>@vec</i> is modified
