--- a/srfi-160.html
+++ b/srfi-160.html
@@ -482,7 +482,7 @@ is scanned.
 <p>Iterate over the elements of <i>@vec</i> and apply <i>f</i>
 to each, returning respectively a @vector of the results,
 an undefined value with the results placed back in <i>@vec</i>,
-  and an undefined value with no change to <i>@vec</i>.</p>
+and an undefined value with no change to <i>@vec</i>.</p>
 
 <p>If more than one vector is passed, <i>f</i> gets one element
   from each vector as arguments.  If the lengths of the vectors differ,
@@ -515,9 +515,9 @@ rather than just the final result.</p>
 <p>Return the shortest prefix/suffix of <i>@vec</i> all of whose elements
 satisfy <i>pred?</i>.</p>
 
-<p><code>(@vector-drop-while <i>pred? vec</i>) -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-drop-while <i>pred? @vec</i>) -> @vector</code> [SRFI 152]</p>
 
-<p><code>(@vector-drop-while-right <i>pred? vec</i>) -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-drop-while-right <i>pred? @vec</i>) -> @vector</code> [SRFI 152]</p>
 
 <p>Drops the longest initial prefix/suffix of <i>@vec</i> such that all its
 elements satisfy <i>pred</i>.</p>
@@ -622,14 +622,14 @@ onto <i>@to</i>, starting at index <i>at</i>.</p>
 
 <p>The same as <code>@vector-copy!</code>, but copies in reverse.</p>
 
-<p><code>(@vector-unfold! <i>f vec start end seed</i>) -> @vector</code> [SRFI 133]</p>
+<p><code>(@vector-unfold! <i>f @vec start end seed</i>) -> @vector</code> [SRFI 133]</p>
 
 <p>Like <code>vector-unfold</code>, but the elements are copied into the
-vector <i>vec </i> starting at element <i>start</i> rather than into a newly allocated
+vector <i>@vec</i> starting at element <i>start</i> rather than into a newly allocated
 vector. Terminates when <i>end</i> - <i>start</i> elements have been generated.
 </p>
 
-<p><code>(@vector-unfold-right! <i>f vec start end seed</i>) -> @vector</code> [SRFI 133]</p>
+<p><code>(@vector-unfold-right! <i>f @vec start end seed</i>) -> @vector</code> [SRFI 133]</p>
 
 <p>The same as <code>@vector-unfold!</code>, but initializes the @vector from right to left.</p>
 
@@ -676,7 +676,7 @@ comparator whose components provide ordering and hashing of @vectors.
 
 <H3>Output</H3>
 
-<p><code>(write-@vector <i>vec</i> [ <i>port</i> ] ) -> unspecified</code></p>
+<p><code>(write-@vector <i>@vec</i> [ <i>port</i> ] ) -> unspecified</code></p>
 
 <p>Prints to <i>port</i> (the current output port by default) a representation of
 <i>@vec</i> in the lexical syntax explained below.</p>
