Add erratum note.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -36,6 +36,8 @@ Shiro Kawai (contributed a major patch).
   <li>Draft #10 published: 2019/5/21</li>
   <li>Draft #11 published: 2019/7/31</li>
   <li>Finalized: 2019/8/27</li>
+  <li>Revised to fix errata:
+    <ul><li>2019/8/29 (Document behavior on multiple returns.)</li></ul></li>
 </ul>
 
 <H1>Abstract</H1>
