--- a/srfi-160.html
+++ b/srfi-160.html
@@ -45,7 +45,7 @@ Shiro Kawai (contributed a major patch).
 <p>This SRFI describes a set of operations on SRFI 4 homogeneous
 vector types (plus a few additional types) that are closely analogous
 to the vector operations library,
-<a href="http://srfi.schemers.org/srfi-133/srfi-133.html">
+<a href="https://srfi.schemers.org/srfi-133/srfi-133.html">
 SRFI 133</a>.
 An external representation is specified which may be supported by the
 <code>read</code> and <code>write</code> procedures and by the program
@@ -73,7 +73,7 @@ representation is efficiently implemented on the hardware of most
 current computer architectures (8, 16, 32 and 64 bit integers, either
 signed or unsigned, and 32 and 64 bit floating point numbers).</p>
 
-<p>This SRFI extends <a href="http://srfi.schemers.org/srfi-4/srfi-4.html">SRFI 4</a>
+<p>This SRFI extends <a href="https://srfi.schemers.org/srfi-4/srfi-4.html">SRFI 4</a>
 by providing the additional
 <code>c64vector</code> and <code>c128vector</code> types, and
 by providing analogues for almost all of the heterogeneous vector procedures
@@ -663,7 +663,7 @@ elements as the argument, in reverse order where specified.</p>
 </p>
 
 <p>
-Returns a <a href="http://srfi.schemers.org/srfi-121/srfi-121.html">SRFI 121</a>
+Returns a <a href="https://srfi.schemers.org/srfi-121/srfi-121.html">SRFI 121</a>
 generator that generates all the values of <em>@vector</em> in order.
 Note that the generator is finite.
 </p>
@@ -676,7 +676,7 @@ Note that the generator is finite.
 
 <p>
 Variable containing a
-<a href="http://srfi.schemers.org/srfi-128/srfi-128.html">SRFI 128</a>
+<a href="https://srfi.schemers.org/srfi-128/srfi-128.html">SRFI 128</a>
 comparator whose components provide ordering and hashing of @vectors.
 </p>
 
