--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <body>
     <h1>SRFI 160: Homogeneous numeric vector libraries</h1>
-    <p class="authors">by John Cowan (based on SRFI 4 by Marc Feeley) and Shiro Kawai (contributed a major patch)</p>
+    <p class="authors">by John Cowan and Shiro Kawai (contributed a major patch)</p>
+    <p class="based-on">Based on SRFI 4 by Marc Feeley.</p>
     <p class="status">status: <em>final</em> (2019-08-27)</p><span class="see-also">See also <a href="/srfi-4/">SRFI 4: Homogeneous numeric vector datatypes</a>, <a href="/srfi-74/">SRFI 74: Octet-Addressed Binary Blocks</a>, <a href="/srfi-133/">SRFI 133: Vector Library (R7RS-compatible)</a>, and <a href="/srfi-152/">SRFI 152: String Library (reduced)</a>.</span>
 
     <ul class="info">
