srfi-160.html: Remove extraneous ] brace.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -434,7 +434,7 @@ unless all @vectors are the same length.</p>
 
 <H3>Iteration</H3>
 
-<p><code>(@vector-take <i>@vec n</i>) -&gt; @vector</code>] [SRFI 152]</p>
+<p><code>(@vector-take <i>@vec n</i>) -&gt; @vector</code> [SRFI 152]</p>
 
 <p><code>(@vector-take-right <i>@vec n</i>) -&gt; @vector</code> [SRFI 152]</p>
 
