SRFI editor copyright\n\nFor simplicity and consistency, SRFI editor retains copyright on these files.  Abstract was provided by authors, but is subject to fair use.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <!-- SPDX-FileCopyrightText: 2024 John Cowan and Shiro Kawai (contributed a major patch) -->
+      <!-- SPDX-FileCopyrightText: 2024 Arthur A. Gleckler -->
       <!-- SPDX-License-Identifier: MIT -->
       <title>Homogeneous numeric vector libraries</title>
       <link href="/admin.css" rel="stylesheet">
